# glad

./: .gitattributes  .gitignore  CMakeLists.txt  license.txt  readme.md  readme.txt
include/glad/: glad.h  glad_egl.h  glad_glx.h  glad_wgl.h  glx.h  wgl.h
include/glext/: egl.h  gl.h  glx.h  wgl.h
source/: egl.c  gl.c  glad.c  glad_egl.c  glad_glx.c  glad_wgl.c  glx.c  wgl.c
tests/: CMakeLists.txt  window.c  x11_test.c
